<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Role"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:id="@+id/sp_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toBottomOf="@id/tv_role">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sample_array"
                android:prompt="@string/select_role" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_reviewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Select Reviewer"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/sp_role"/>

        <RelativeLayout
            android:id="@+id/sp_reviewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toBottomOf="@id/tv_reviewer">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sample_array"
                android:prompt="@string/select_reviewer" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Select RM"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/sp_reviewer"/>

        <RelativeLayout
            android:id="@+id/sp_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toBottomOf="@id/tv_rm">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sample_array"
                android:prompt="@string/select_rm" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPink"
            android:layout_marginTop="20dp"
            android:text="SEARCH"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sp_rm"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</RelativeLayout>