<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.login.LoginActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.neosoft.login.screen.loginscreen.activities.login.LoginBindingModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorLavendar">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caps_login"
            android:textSize="60sp"
            android:textColor="@color/colorIndigo"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_email"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:text="@{model.email}"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:drawablePadding="15dp"
            android:textColor="@color/colorIndigo"
            android:textColorHint="@color/colorLightIndigo"
            android:backgroundTint="@color/colorIndigo"
            android:drawableStart="@drawable/ic_mail_indigo_24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorLightIndigo"
            android:textColor="@color/colorIndigo"
            android:text="@{model.password}"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/colorIndigo"
            android:drawableStart="@drawable/ic_lock_indigo_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintBottom_toTopOf="@id/btn_login"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/colorIndigo"
            android:text="@string/caps_login"
            android:textColor="@color/colorLavendar"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:visibility="@{model.loading ? View.VISIBLE : View.GONE }">

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="@{model.loading ? View.VISIBLE : View.GONE }"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</layout>